// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense List Component should render expense list with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Expense List Component should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Component
      amount={195}
      createdAt={0}
      description="sweet gum"
      id="1"
      key="1"
      note=""
    />
    <Component
      amount={500}
      createdAt={-345600000}
      description="candy"
      id="2"
      key="2"
      note=""
    />
    <Component
      amount={123400}
      createdAt={345600000}
      description="beer"
      id="3"
      key="3"
      note="stout"
    />
  </div>
</div>
`;
